added update method
