# docs/swagger.json
@@ -47,14 +47,14 @@
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "Максимальное количество возвращаемых машин",
+                        "description": "Максимальное количество возвращаемых людей",
                         "name": "limit",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 0,
-                        "description": "Число первых пропущенных возвращаемых машин",
+                        "description": "Число первых пропущенных возвращаемых людей",
                         "name": "offset",
                         "in": "query"
                     }
@@ -96,6 +96,62 @@
                     }
                 }
             }
+        },
+        "/v1/human/{id}": {
+            "delete": {
+                "description": "Удалить человека по его идентификатору",
+                "tags": [
+                    "люди"
+                ],
+                "summary": "Удалить человека по его идентификатору",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Идентификатор человека",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            },
+            "patch": {
+                "description": "Обновить человека по его идентификатору. Принимает JSON с обновленными полями",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "люди"
+                ],
+                "summary": "Обновить человека по его идентификатору",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Идентификатор человека",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Тело запроса",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_P1xart_effective_mobile_service_internal_controller_v1_request.UpdateHuman"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -120,6 +176,29 @@
                 }
             }
         },
+        "github_com_P1xart_effective_mobile_service_internal_controller_v1_request.UpdateHuman": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nationality": {
+                    "type": "string"
+                },
+                "potronymic": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_P1xart_effective_mobile_service_internal_controller_v1_response.GetAllHumans": {
             "type": "object",
             "properties": {
@@ -140,10 +219,16 @@
                 "age": {
                     "type": "integer"
                 },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
                 "name": {
                     "type": "string"
                 },
-                "nationaly": {
+                "nationality": {
                     "type": "string"
                 },
                 "potronymic": {
