# internal/controller/v1/request/humans.go
@@ -5,3 +5,12 @@ type CreateHuman struct {
 	Surname    string `json:"surname" validate:"required" example:"Vasiliev"`
 	Potronymic string `json:"potronymic,omitempty" example:"Vasilevich"`
 }
+
+type UpdateHuman struct {
+	Name        string `json:"name"`
+	Surname     string `json:"surname"`
+	Potronymic  string `json:"potronymic"`
+	Age         string `json:"age"`
+	Gender      string `json:"gender"`
+	Nationality string `json:"nationality"`
+}
